# urban-drainage-sensor-data-toolkit

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINAL_REPO_READY_NOTES.md  GITHUB_CREATE_REPO_ANACONDA_GUIDE.md  GITHUB_SETUP_COMMANDS.txt  LICENSE  PUBLIC_CLEAN_AUDIT.md  README.md  SECURITY.md  app.py  pyproject.toml  requirements-legacy.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  tests.yml
docs/: applied_ai_extension.md  case_study.md  confidentiality_statement.md  live_demo.md  portfolio_summary.md  private_data_workflow.md  private_input_workflow.md  research_software_card.md  security_review.md  status_rules.md  synthetic_map_example.md  validation_notes.md  validation_scope.md
examples/: create_synthetic_data.py  run_synthetic_workflow.py
examples/maps/: README.md  create_synthetic_map.py
examples/ml/: README.md  run_anomaly_demo.py
examples/network_demo/: README.md  run_network_demo.py
scripts/: add_case_study_link.py  add_streamlit_demo_metadata.py  create_readme_assets.py  fix_readme_markdown_formatting.py  polish_readme_outputs_and_ci.py  run_public_demo.py  update_live_demo_link.py  update_readme_dashboard_section.py  update_readme_network_demo.py
tests/: test_anomaly_baseline.py  test_cli.py  test_cli_map_demo.py  test_cli_network_demo.py  test_core.py  test_events.py  test_hydrology.py  test_maps.py  test_ml_features.py  test_network_report.py  test_reporting_plot.py  test_status_rules.py  test_synthetic_network.py
tools/: make_private_sample.py
(+17 files in other folders)
